# cascara

./: .travis.yml  CMakeLists.txt  README.md
src/: cascara.hpp  chai.hpp  mocha.hpp
test/: CMakeLists.txt  test_cascara.cpp
